facilitando o mapeamento de URL do CORS